--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "concurrently": "^8.2.2",
     "gsap": "^3.12.5",
-    "locomotive-scroll": "^4.1.4",
+    "locomotive-scroll": "^5.0.0-beta.13",
     "lottie-react": "^2.4.0",
     "multer": "^1.4.5-lts.1",
     "razorpay": "^2.9.4",
