--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "concurrently": "^8.2.2",
-    "gsap": "^3.12.5",
     "locomotive-scroll": "^5.0.0-beta.13",
     "lottie-react": "^2.4.0",
     "multer": "^1.4.5-lts.1",
@@ -53,6 +52,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "@types/gsap": "^3.0.0",
+    "gsap": "^3.12.5"
   }
 }
